2007-04-17  Brian Bidulock  <bidulock@openss7.org>

	* tests/testsuite.at: testsuite factoring

2007-04-12  Brian Bidulock  <bidulock@openss7.org>

	* tests/local.at: corrected typo

2007-03-25  Brian Bidulock  <bidulock@openss7.org>

	* acinclude.m4: support for 2.6.20-1.2307.fc5
	* doc/manual/news.texi: support for 2.6.20-1.2307.fc5
	* src/drivers/socksys.c: support for 2.6.20-1.2307.fc5
	* src/modules/sockmod.c: support for 2.6.20-1.2307.fc5

	* src/drivers/socksys.c: register qlock option
	* src/modules/sockmod.c: register qlock option

2007-03-15  Brian Bidulock  <bidulock@openss7.org>

	* doc/manual/news.texi: pushed release date

	* src/test/test-sock.c: report failed expectations
	* src/test/test-socket.c: report failed expectations
	* src/test/test-socklib.c: report failed expectations
	* src/test/test-sockmod.c: report failed expectations
	* src/test/test-sockpath.c: report failed expectations
	* src/test/test-socksys.c: report failed expectations

2007-03-12  Brian Bidulock  <bidulock@openss7.org>

	* tests/local.at: corrections for autotest 2.59b+

	* doc/man/man8/test-socket.8.man: test updates
	* doc/man/man8/test-socklib.8.man: test updates
	* doc/man/man8/test-sockmod.8.man: test updates
	* doc/man/man8/test-sockpath.8.man: test updates
	* doc/man/man8/test-socksys.8.man: test updates
	* doc/man/man8/test-xxx.8.man: test updates

2007-03-08  Brian Bidulock  <bidulock@openss7.org>

	* src/util/init/strsock.sh: ubuntu looks for lsb info in init scripts

2007-03-07  Brian Bidulock  <bidulock@openss7.org>

	* Makefile.am (modutil_DATA): should not be distributed
	* tests/atlocal.in: tool substitutions changed

2007-03-06  Brian Bidulock  <bidulock@openss7.org>

	* doc/manual/Makefile.am: attempt proper texinfo dependencies

2007-03-05  Brian Bidulock  <bidulock@openss7.org>

	* acinclude.m4: correct version numbers
	* strsock.spec.in: do not release source package

2007-03-04  Brian Bidulock  <bidulock@openss7.org>

	* AUTHORS: updates for release