@@ -1,6 +1,6 @@
 # =============================================================================
 # 
-# @(#) $RCSfile$ $Name$($Revision$) $Date$
+# @(#) $RCSfile: Makefile,v $ $Name:  $($Revision: 0.9.2.1 $) $Date: 2007/05/03 21:24:21 $
 #
 # -----------------------------------------------------------------------------
 #
@@ -45,11 +45,14 @@
 #
 # -----------------------------------------------------------------------------
 #
-# Last Modified $Date$ by $Author$
+# Last Modified $Date: 2007/05/03 21:24:21 $ by $Author: brian $
 #
 # -----------------------------------------------------------------------------
 #
-# $Log$
+# $Log: Makefile,v $
+# Revision 0.9.2.1  2007/05/03 21:24:21  brian
+# - added paper
+#
 # =============================================================================
 
 PREFIX = socktest
