@@ -1,7 +1,7 @@
 %% -*- tex -*- vim: ft=tex tw=78 nocin nosi
 %% =========================================================================
 %%
-%% @(#) $Id$
+%% @(#) $Id: sockimp.tex,v 0.9.2.1 2007/05/03 21:24:21 brian Exp $
 %%
 %% =========================================================================
 %%
@@ -53,7 +53,7 @@
 %% 
 %% =========================================================================
 %%
-%% Last Modified $Date$ by $Author$
+%% Last Modified $Date: 2007/05/03 21:24:21 $ by $Author: brian $
 %%
 %% =========================================================================
 
